Fixes content and text overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -205,8 +205,8 @@ a.current {
 .features-list {
   width: 1200px;
   padding: 0;
-  margin-top: 142px;
-  margin-bottom: 60px;
+  margin-top: 141px;
+  margin-bottom: 69px;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -221,7 +221,6 @@ a.current {
 
 .features-item p {
   width: 290px;
-  min-height: 50px;
 }
 
 .features-icon::before {
@@ -280,6 +279,10 @@ a.current {
   background-color: #81b3d2;
 }
 
+.blue-back h3 {
+  width: 305px;
+}
+
 .grey-back {
   padding: 0px 60px;
   padding-top: 26px;
@@ -288,8 +291,11 @@ a.current {
   min-height: 255px;
 }
 
+.grey-back h3 {
+  width: 280px;
+}
+
 .benefit-heading {
-  width: 100%;
   padding: 0 61px;
   margin-bottom: 24px;
 }
@@ -1010,7 +1016,11 @@ a.current {
   background: url("../img/icon-down-active.svg") no-repeat;
 }
 
-.sorting-options {
+
+
+.sorting-options,
+.sorting-options-wrapper {
+  width: 300px;
   margin: 0;
   display: flex;
   align-items: center;
@@ -1020,7 +1030,7 @@ a.current {
   margin-left: -2px;
 }
 
-.sorting-options p {
+.sorting-options-wrapper p {
   margin: 0;
   margin-right: 43px;
 }
